{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 1042,
  "lineage": "2e07976b-1fc5-f810-2523-a11eb5eba9ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06f99c95e62eb4aa2",
            "domain": "vpc",
            "id": "eipalloc-0b0efbbce010c2a92",
            "instance": "i-031224248c40d4f81",
            "network_interface": "eni-014c933918d1f8e4b",
            "private_dns": "ip-10-0-53-229.ec2.internal",
            "private_ip": "10.0.53.229",
            "public_dns": "ec2-3-210-244-80.compute-1.amazonaws.com",
            "public_ip": "3.210.244.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.ec2_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038523756874b86f3",
            "arn": "arn:aws:ec2:us-east-1:354044256443:instance/i-031224248c40d4f81",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-031224248c40d4f81",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployment-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-014c933918d1f8e4b",
            "private_dns": "ip-10-0-53-229.ec2.internal",
            "private_ip": "10.0.53.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-04fc0573722c02cab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0493e26626b0399c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08882696a4c181ae9",
            "tags": {
              "Name": "Terraform_2019-08-19T12:06:30Z"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0493e26626b0399c2"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "data.aws_ami.packer_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-043133efc6649a326",
            "owner_id": "354044256443",
            "tags": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-09d5a4cc0dc7933ec"
          },
          "depends_on": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0afce1ff611fd4c4e",
            "owner_id": "354044256443",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043133efc6649a326",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "vpc_id": "vpc-09d5a4cc0dc7933ec"
          },
          "depends_on": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a263aae852d38e17",
            "route_table_id": "rtb-0afce1ff611fd4c4e",
            "subnet_id": "subnet-08882696a4c181ae9"
          },
          "depends_on": [
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354044256443:security-group/sg-0493e26626b0399c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0493e26626b0399c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": null,
            "owner_id": "354044256443",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09d5a4cc0dc7933ec"
          },
          "depends_on": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354044256443:subnet/subnet-08882696a4c181ae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-08882696a4c181ae9",
            "map_public_ip_on_launch": false,
            "owner_id": "354044256443",
            "vpc_id": "vpc-09d5a4cc0dc7933ec"
          },
          "depends_on": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354044256443:vpc/vpc-09d5a4cc0dc7933ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abd34576a46d82c1",
            "default_route_table_id": "rtb-07ca4ef3fa45acf1a",
            "default_security_group_id": "sg-04f1d86db680224ff",
            "dhcp_options_id": "dopt-69080312",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d5a4cc0dc7933ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07ca4ef3fa45acf1a",
            "owner_id": "354044256443",
            "tags": {
              "Name": "test-env"
            }
          }
        }
      ]
    }
  ]
}